--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -79,4 +79,14 @@ position: absolute;
 width: 33vw !important;
 left: calc((100vw - 33vw)/2);
 }
+.page-container[style="display: none;"] .layout-side-section {
+display: none;
+}
+.page-container[style="display: none;"] {
+display: block !important;
+/* visibility: hidden; */
+}
+.page-container[style="display: none;"] .page-actions {
+display: none;
+}
 
