--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -71,3 +71,8 @@ position: absolute;
 width: 33vw !important;
 left: calc((100vw - 33vw)/2);
 }
+#page-Workspaces .layout-side-section {
+display: block !important;
+
+  position: fixed;
+}
