--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -65,11 +65,15 @@ display: none;
 :root {
   overscroll-behavior: none;
 }
+.search-bar .awesomplete input {
 
+text-align: center;
+}
 .search-bar {
 position: absolute;
 width: 33vw !important;
 left: calc((100vw - 33vw)/2);
+  max-width: 100%!important;
 }
 #page-Workspaces .layout-side-section {
 display: block !important;
