--- a/leetrental/public/css/minimize-to-sidebar.css
+++ b/leetrental/public/css/minimize-to-sidebar.css
@@ -57,7 +57,7 @@
 .minibtn__doctype{
   font-size: 12px;
   font-weight: 600;
-  color: #cbd5e1; /* lighter slate */
+  color: #6481a4; /* lighter slate */
   line-height: 1.2;
   white-space: nowrap;
   overflow: hidden;
@@ -67,7 +67,7 @@
 .minibtn__docname{
   font-size: 13px;
   font-weight: 400;
-  color: #f1f5f9; /* brighter */
+  color: #222222; /* brighter */
   line-height: 1.3;
   white-space: nowrap;
   overflow: hidden;
