--- a/leetrental/public/css/minimize-to-sidebar.css
+++ b/leetrental/public/css/minimize-to-sidebar.css
@@ -52,10 +52,9 @@ cursor: pointer;
 font-size: 24px;
 opacity: 0.6;
 padding: 0px;
-background-color: var(--btn-group-border-color);
+background: rgb(136, 182, 207);
 width: 32px;
 height: 45px;
-background-image: radial-gradient(rgb(94, 98, 101), rgb(107, 108, 110) 13.03%, rgb(79, 83, 85));
 border-top-right-radius: 10px;
 border-bottom-right-radius: 10px;
 }
