--- a/leetrental/public/css/minimize-to-sidebar.css
+++ b/leetrental/public/css/minimize-to-sidebar.css
@@ -62,6 +62,7 @@ border-bottom-right-radius: 10px;
   cursor: pointer;
   border: 0;
   transition: background .2s ease;
+  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
 .minibtn__labels{
