--- a/leetrental/public/css/minimize-to-sidebar.css
+++ b/leetrental/public/css/minimize-to-sidebar.css
@@ -53,7 +53,7 @@
   border-top: 1px solid rgba(148,163,184,.12);
   margin-top: 8px;
 }
-.sidebar__minimized{ padding:8px; display:grid; gap:6px; border-top:1px solid rgba(148,163,184,.12); margin-top:8px; }
+.sidebar__minimized{ padding-bottom:10px; display:grid; gap:6px; border-top:1px solid rgba(148,163,184,.12); margin-top:8px;padding-bottom: 10px; }
 
 /* Buttons */
 
@@ -64,6 +64,7 @@ width: 24px;
 text-align: center;
 opacity: 0.9;
 font-size: 22px;
+  margin-left: 6px;
 /* margin-right: 5px; */
 }
 .minibtn__labels {
