--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -1,4 +1,13 @@
 @media only screen and (min-width: 992px) {
+.layout-main .layout-side-section {
+padding: 0px !important;
+box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+  body {
+margin: 0px;
+padding: 0px !important;
+width: 100vw;
+}
 .sidebar-item-content {
 font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
 -webkit-font-smoothing: antialiased;
