--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -2,6 +2,7 @@
 [data-page-route=Workspaces] .layout-main .layout-side-section {
 padding: 0px !important;
 box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  z-index:99;
 }
 
   .sidebar-item-icon {
