--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -136,9 +136,24 @@ top: var(--navbar-height);
 background: var(--bg-color);
 margin-bottom: 5px;
 transition: top 0.5s;
-width: calc(83.34vw);
+width: calc(100vw - 16.66667vw);
 right: 0px;
 position: absolute;
+left: 16.66667%;
+  padding-left: 20px;
+padding-right: 20px;
+}
+  [data-page-route="Workspaces"] .page-head {
+z-index: 6;
+top: var(--navbar-height);
+background: var(--bg-color);
+margin-bottom: 5px;
+transition: top 0.5s;
+width: calc(100vw - 16.66667vw);
+right: 0px;
+left: 16.66667%;
+  padding-left: 20px;
+padding-right: 20px;
 }
 [data-page-route="Workspaces"] .layout-main .layout-main-section-wrapper {
 padding-top: var(--page-head-height);
