--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -1,5 +1,11 @@
 @media only screen and (min-width: 992px) {
 
+
+  .page-body {
+padding-right: 40px !important;
+padding-left: 40px !important;
+}
+
   .sticky-top {
 height: 48px;
 }
