--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -1,5 +1,16 @@
 @media only screen and (min-width: 992px) {
-
+.frappe-control .img-responsive {
+background-color: var(--bg-light-gray);
+vertical-align: middle;
+text-align: center;
+border-radius: var(--border-radius-sm);
+box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+line-height: 300px !important;
+width: auto !important;
+height: 100% !important;
+aspect-ratio: 1 / 1 !important;
+max-height: 300px !important;
+}
 
 
 
