--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -1,4 +1,12 @@
 @media only screen and (min-width: 992px) {
+  .frappe-control .control-label.reqd:after {
+content: " *";
+color: var(--red-600) !important;
+white-space: nowrap;
+font-size: 16px !important;
+position: absolute !important;
+left: -12px !important;
+}
 .frappe-control .img-responsive {
 background-color: var(--bg-light-gray);
 vertical-align: middle;
