--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -7,6 +7,9 @@ font-size: 16px !important;
 position: absolute !important;
 left: -12px !important;
 }
+  .list-sidebar {
+padding-top: 40px!important;
+}
 .frappe-control .img-responsive {
 background-color: var(--bg-light-gray);
 vertical-align: middle;
@@ -20,7 +23,9 @@ aspect-ratio: 1 / 1 !important;
 max-height: 300px !important;
 }
 
-
+.navbar .container {
+padding: 0 10px!important;
+}
 
   .sticky-top {
 height: 48px;
@@ -43,7 +48,7 @@ box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px
 }
 
   .sidebar-item-icon {
-margin: 8px !important;
+margin: 16px !important;
 }
 
   .item-anchor{
