--- a/leetrental/public/css/leetrental.css
+++ b/leetrental/public/css/leetrental.css
@@ -157,6 +157,7 @@ right: 0;
 position: absolute;
   top: var(--navbar-height) !important;
   left: 16.66667%;
+  padding: 0px 20px 20px 20px !important;
 }
 #page-Workspaces[style="display: none;"] .layout-side-section {
 display: block !important;
